--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": ""
   },
   "dependencies": {
+    "express": "^4.13.4",
     "jquery": "^2.2.4",
     "react": "^15.1.0",
+    "react-bootstrap": "^0.29.4",
     "react-dom": "^15.1.0"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "jsdom": "^9.2.1",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.1.0",
+    "sinon": "^1.17.4",
     "webpack": "^1.13.1"
   },
   "scripts": {
