--- a/package.json
+++ b/package.json
@@ -6,33 +6,6 @@
   "directories": {
     "test": ""
   },
-  "dependencies": {
-    "body-parser": "^1.15.1",
-    "express": "^4.13.4",
-    "jquery": "^2.2.4",
-    "react": "^15.1.0",
-    "react-bootstrap": "^0.29.4",
-    "react-dom": "^15.1.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-register": "^6.9.0",
-    "chai": "^3.5.0",
-    "enzyme": "^2.3.0",
-    "jsdom": "^9.2.1",
-    "mocha": "^2.5.3",
-    "react-addons-test-utils": "^15.1.0",
-    "sinon": "^1.17.4",
-    "webpack": "^1.13.1"
-  },
-  "scripts": {
-    "test": "mocha --compilers js:babel-core/register test/App.spec.js",
-    "start": "webpack -w"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alicekao/sound.git"
@@ -42,5 +15,37 @@
   "bugs": {
     "url": "https://github.com/alicekao/sound/issues"
   },
-  "homepage": "https://github.com/alicekao/sound#readme"
+  "homepage": "https://github.com/alicekao/sound#readme",
+  "scripts": {
+    "test": "mocha --compilers js:babel-core/register test/App.spec.js",
+    "webpack-server": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors --hot",
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.1",
+    "react": "^15.1.0",
+    "react-bootstrap": "^0.29.4",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-register": "^6.9.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.3.0",
+    "express": "^4.13.4",
+    "jsdom": "^9.2.1",
+    "mocha": "^2.5.3",
+    "react-addons-test-utils": "^15.1.0",
+    "sinon": "^1.17.4",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
+  }
 }
